@@ -1,3 +1,11 @@
+2004-08-07  Sushma Rai  <rsushma@novell.com>
+
+	* mail/mail-stub-exchange.c (get_folder_info): Handling 
+	favorite folder and foreign folder hierarchies, to display
+	users favorite public mail folders and subscribed mail folders.	
+	(account_new_folder): ditto
+	(account_removed_folder): ditto 
+
 2004-08-05  Dan Winship  <danw@novell.com>
 
 	* lib/e2k-context.c (e2k_context_transfer_start): Make this split
